gccida/g0/invalidate_from_clobbers
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/invalidate_from_clobbers/src/cse.c:6874:13: error: expected identifier or '('
 struct ref = x->fld[0].rtx; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/invalidate_from_clobbers/src/cse.c:6875:7: error: expected expression
if (  struct ref ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/invalidate_from_clobbers/src/cse.c:6883:32: error: use of undeclared identifier 'machine_mode'
invalidate( ref->fld[0].rtx, ( machine_mode)*( ( unsigned __int8 *)ref + 2)); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/invalidate_from_clobbers/src/cse.c:6901:34: error: use of undeclared identifier 'machine_mode'
invalidate( ref_0->fld[0].rtx, ( machine_mode)*( ( unsigned __int8 *)ref_0 + 2)); 
                                 ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/invalidate_from_clobbers/src/obj/cse.o] Error 1
